# vendor-intel-utils

./: .gitattributes  .gitignore  0001-Add-entry-point-script-for-aic-cloud-env.patch  0001-Fix-the-error-of-sound-output-disorder.patch  0001-PM-Refactor-Push-button-to-suspend-resume-the-system.patch  02_0002-Audio-source-selectin.patch  169.patch  Android.mk  AndroidManifest.xml  AndroidProducts.mk  CMakeLists.txt  CleanSpec.mk  LICENSE  LICENSE_for_autopatch  OWNERS  README  README.md  README.rst  apply_patch.sh  autopatch.sh  cap_checker.py  iwlwifi-ma-b0-gf-a0-88.ucode  iwlwifi-so-a0-gf-a0-88.ucode  proxy.patch  vendorsetup.sh
android/: apply_patch.sh
android_ia_64/: AndroidBoard.mk  AndroidProducts.mk  android_ia_64.mk  vendorsetup.sh
android_p/: 0001-adb-dbc-Adding-kernel-cmdline-for-DbC-Raw-serialno.patch
sources/encoder/: CMakeLists.txt  auto_version.h.in  cli.cpp  cli.hpp  display_common.h  display_renderer.h  display_server.cpp  display_server.h  display_server_vhal.cpp  display_server_vhal.h  display_video_renderer.cpp  display_video_renderer.h  main.cpp
sources/encoder/icr_shared/: CMakeLists.txt
sources/encoder/icr_shared/encoder/: CMakeLists.txt  IrrStreamer.cpp  IrrStreamer.h  data_types.h  encoder.cpp  encoder.h  irr_encoder.map  stream.h
sources/encoder/icr_shared/encoder/irrv/: irrv_impl.h  irrv_protocol.cpp  irrv_protocol.h
sources/encoder/icr_shared/encoder/tcae/: CTcaeWrapper.cpp  enc_frame_settings_predictor.cpp  enc_frame_settings_predictor.h  net_pred.cpp  net_pred.h
sources/encoder/icr_shared/encoder/transcode/include/: ProfileLevel.h  version.h
sources/encoder/icr_shared/encoder/transcode/include/core/: CCallbackMux.h  CDecoder.h  CDemux.h  CFFDecoder.h  CFFDemux.h  CFFEncoder.h  CFFFilter.h  CFFMux.h  CIrrVideoDemux.h  CMux.h  CQSVAPIDevice.h  CStreamInfo.h  CTransCoder.h  CVAAPIDevice.h
sources/encoder/icr_shared/encoder/transcode/include/utils/: IORuntimeWriter.h  IOStreamWriter.h  ProfTimer.h
sources/encoder/icr_shared/encoder/transcode/src/: CMakeLists.txt  CTransLog.cpp
sources/encoder/icr_shared/encoder/transcode/src/core/: CCallbackMux.cpp  CFFDecoder.cpp  CFFDemux.cpp  CFFEncoder.cpp  CFFFilter.cpp  CFFMux.cpp  CIrrVideoDemux.cpp  CQSVAPIDevice.cpp  CRemoteMux.h  CTransCoder.cpp  CVAAPIDevice.cpp
sources/encoder/icr_shared/encoder/transcode/src/utils/: IORuntimeWriter.cpp  IOStreamWriter.cpp
sources/encoder/icr_shared/icr_alloc/: CMakeLists.txt  icr_alloc.map
sources/encoder/icr_shared/icr_alloc/include/: icr_alloc.h  icr_alloc_internal.h
sources/encoder/icr_shared/icr_alloc/libs/: CMakeLists.txt  icr_alloc.c
sources/encoder/icr_shared/sock_util/: CMakeLists.txt  sock_client.cpp  sock_util.cpp  sock_util.map
sources/encoder/icr_shared/time_log/: CMakeLists.txt  TimeLog.cpp  TimeLog.h
sources/encoder/shared/: CCallbackMux.cpp  CCallbackMux.h  CEncoder.h  CFFDecoder.cpp  CFFDecoder.h  CFFDemux.cpp  CFFDemux.h  CFFEncoder.cpp  CFFEncoder.h  CFFFilter.cpp  CFFFilter.h  CFFMux.cpp  CFFMux.h  CFilter.h  CIrrVideoDemux.cpp  CIrrVideoDemux.h  CMakeLists.txt  CQSVAPIDevice.cpp  CQSVAPIDevice.h  CRemoteMux.cpp  CRemoteMux.h  CTransCoder.cpp  CTransCoder.h  CVAAPIDevice.cpp  CVAAPIDevice.h  IrrStreamer.cpp  IrrStreamer.h  ProfileLevel.h  encoder.cpp  encoder.h  encoder_comm.h  encoder_version.h  ffmpeg_compat.h  stream.cpp
sources/encoder/shared/irrv/: irrv.pc.in  irrv_protocol.cpp  irrv_protocol.h
sources/encoder/shared/tcae/: CTcaeWrapper.h
sources/encoder/shared/utils/: CTransLog.cpp  CTransLog.h  IORuntimeWriter.cpp  IORuntimeWriter.h  IOStreamWriter.h  ProfTimer.cpp  TimeLog.cpp  safe_queue.h
sources/encoder/sock_util/: CMakeLists.txt  sock_client.h  sock_server.cpp  sock_server.h  sock_util.h
sources/streamer/: CMakeLists.txt
sources/streamer/config/: CMakeLists.txt
sources/streamer/config/android-cg/: server.desktop.webrtc.conf
sources/streamer/config/android-cg/common/: audio-pcm.conf  camera.conf  controller.conf  video-x264-param.conf  video-x264.conf
sources/streamer/core/: CMakeLists.txt  QoSMgt.cpp  QoSMgt.h  TcaeLogger.h  asource.cpp  asource.h  cg-version.h  controller.cpp  controller.h  ctrl-msg.cpp  ctrl-msg.h  cursor.cpp  cursor.h  cursor_data.h  dpipe.cpp  dpipe.h  encoder-common.cpp  encoder-common.h  ga-avcodec.cpp  ga-avcodec.h  ga-common.cpp  ga-common.h  ga-conf.cpp  ga-conf.h  ga-confvar.cpp  ga-confvar.h  ga-crc.cpp  ga-crc.h  ga-get-opts.cpp  ga-get-opts.h  ga-module.cpp  ga-module.h  ga-msg.h  ga-param-shared.cpp  ga-param-shared.h  ga-win32.cpp  ga-win32.h  rtspconf.cpp  rtspconf.h  vconverter.cpp  (+3 more)
sources/streamer/module/: CMakeLists.txt
sources/streamer/module/e2elatency/: CMakeLists.txt  E2ELatencyBase.h  E2ELatencyClient.cpp  E2ELatencyClient.h  E2ELatencyFactory.cpp  E2ELatencyFactory.h  E2ELatencyServer.cpp  E2ELatencyServer.h  gae2elatency.proto
sources/streamer/module/irrv-receiver/: CMakeLists.txt  CSendRecvMessage.cpp  CSendRecvMessage.h  irrv-receiver.cpp  irrv_protocol.h  sock_client.cpp  sock_client.h  sock_util.h
sources/streamer/module/server-webrtc/: CMakeLists.txt  ga-audio-input.cpp  ga-audio-input.h  ga-controller-android.cpp  ga-controller-android.h  ga-controller-sdl.cpp  ga-controller-sdl.h  ga-controller.h  ga-cursor.cpp  ga-cursor.h  ga-qos.cpp  ga-qos.h  ga-video-input.cpp  ga-video-input.h  ics-p2p-client.cpp  ics-p2p-client.h  p2p-socket-signaling-channel.cpp  p2p-socket-signaling-channel.h  server-webrtc.cpp  server-webrtc.h
sources/streamer/module/server-webrtc/aic-vhal-client/: AudioPlayer.cpp  AudioPlayer.h  CameraClientHandler.cpp  CameraClientHandler.h  CommandChannelHandler.cpp  CommandChannelHandler.h  EncodedVideoDispatcher.cpp  EncodedVideoDispatcher.h  RemoteStreamHandler.cpp  RemoteStreamHandler.h  SensorHandler.cpp  SensorHandler.h  android-common.h  android-latency.cpp  audio-frame-generator.cpp  audio-frame-generator.h
sources/streamer/server/: CMakeLists.txt
sources/streamer/server/periodic/: CMakeLists.txt  ga-server-periodic.cpp
sources/streamer/tests/: CMakeLists.txt  irrv_client.cpp  irrv_client_test.cpp
(+6457 files in other folders)
